Add tests for UI components and wallet functionality

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "front-end"
   ],
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "prettier": "^3.2.5",
     "turbo": "latest"
   },
