--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,9 +13,9 @@
     "start": "next start",
     "export": "next export",
     "// Testing": "",
-    "test": "echo 'Frontend tests not implemented yet'",
-    "test:watch": "echo 'Frontend test watch not implemented yet'",
-    "test:coverage": "echo 'Frontend test coverage not implemented yet'",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "// Code Quality": "",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -30,53 +30,59 @@
     "prepare": "cd .. && husky install"
   },
   "dependencies": {
-    "@stacks/connect": "^7.4.0",
-    "@stacks/connect-react": "^22.2.0",
-    "@stacks/transactions": "^6.13.1",
-    "@stacks/network": "^6.13.1",
-    "@stacks/auth": "^6.13.1",
-    "@stacks/storage": "^6.13.1",
-    "@stacks/wallet-sdk": "^6.13.1",
-    "@stacks/stacking": "^6.13.1",
+    "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@stacks/auth": "^6.13.1",
+    "@stacks/connect": "^7.4.0",
+    "@stacks/connect-react": "^22.2.0",
+    "@stacks/network": "^6.13.1",
+    "@stacks/stacking": "^6.13.1",
+    "@stacks/storage": "^6.13.1",
+    "@stacks/transactions": "^6.13.1",
+    "@stacks/wallet-sdk": "^6.13.1",
+    "@tanstack/react-query": "^4.35.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "next": "13.5.6",
+    "next-themes": "^0.2.1",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.5",
-    "next-themes": "^0.2.1",
-    "zustand": "^4.4.4",
-    "@tanstack/react-query": "^4.35.7",
-    "react-hook-form": "^7.47.0",
-    "@hookform/resolvers": "^3.3.2",
-    "zod": "^3.22.4",
-    "date-fns": "^2.30.0",
-    "react-hot-toast": "^2.4.1",
     "usehooks-ts": "^2.9.1",
-    "next": "13.5.6",
-    "react": "^18",
-    "react-dom": "^18"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss-animate": "^1.0.7",
-    "eslint": "^8.51.0",
-    "eslint-config-next": "^13.5.6",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
-    "prettier": "^3.0.3",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.51.0",
+    "eslint-config-next": "^13.5.6",
     "husky": "^8.0.3",
-    "lint-staged": "^15.0.2"
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
+    "lint-staged": "^15.0.2",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5"
   }
 }
